--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    to left bottom,
+    #d1b92b,
+    #e29321,
+    #e96a33,
+    #e33d4b,
+    #cd0666,
+    #c60070,
+    #bd0079,
+    #b20782,
+    #c6187d,
+    #d82978,
+    #e73b73,
+    #f54d6e
+  );
+  padding: 50px 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Content {
+  display: table;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  background-image: linear-gradient(
+    to left bottom,
+    #d1b92b,
+    #e29321,
+    #e96a33,
+    #e33d4b,
+    #cd0666,
+    #c60070,
+    #bd0079,
+    #b20782,
+    #c6187d,
+    #d82978,
+    #e73b73,
+    #f54d6e
+  );
+  padding: 30px;
 }
